--- a/.github/workflows/ghcr.yml
+++ b/.github/workflows/ghcr.yml
@@ -3,9 +3,7 @@ name: GHCR
 on: push
 
 env:
-    # Use docker.io for Docker Hub if empty
     REGISTRY: ghcr.io
-    # github.repository as <account>/<repo>
     IMAGE_NAME: ${{ github.repository }}
 
 jobs:
@@ -16,35 +14,36 @@ jobs:
             packages: write
 
         steps:
-            - name: Checkout repository
-              uses: actions/checkout@v2
+            - name: Check out repository
+              uses: actions/checkout@v4
 
             - name: Store version information
               run: git describe --tags > .tag.txt || git rev-parse --short HEAD > .tag.txt
 
-            # Login against a Docker registry
-            # https://github.com/docker/login-action
             - name: Log into registry ${{ env.REGISTRY }}
-              uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+              uses: docker/login-action@v3
               with:
                   registry: ${{ env.REGISTRY }}
                   username: ${{ github.actor }}
                   password: ${{ secrets.GITHUB_TOKEN }}
 
-            # Extract metadata (tags, labels) for Docker
-            # https://github.com/docker/metadata-action
             - name: Extract Docker metadata
               id: meta
-              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+              uses: docker/metadata-action@v5
               with:
                   images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-            # Build and push Docker image with Buildx
-            # https://github.com/docker/build-push-action
+            - name: Set up QEMU emulator for multi-arch images
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Build and push Docker image
-              uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+              uses: docker/build-push-action@v6
               with:
                   context: .
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
+                  platforms: 'linux/amd64,linux/arm64'
