--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -1,9 +1,6 @@
 name: Build and push Enketo Express image to Docker Hub
 
-on:
-    push:
-        tags:
-            - '*'
+on: push
 
 env:
     REGISTRY: docker.io
